pages/app.css
body {
	background-color: #282c34;
	color: white;
	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

main {
	max-width: 50rem;
	margin: 0 auto;
}

main > article {
	margin-bottom: 2rem;
}

nav {
	padding: 1rem 0 3rem;
}

nav > ul {
	display: flex;
	justify-content: space-between;
	list-style: none;
	margin: 0;
	padding: 0;
}

nav > ul > li {
	padding: 0.8rem 1.4rem;
	background: white;
	border-radius: 8px;
	transition: 200ms;
	cursor: pointer;
	font-weight: bold;
	box-shadow: 0 0 5px -1px #000000;
}

nav > ul > li.active {
	background: #efdb50;
}

nav > ul > li:hover {
	transform: scale(1.05);
	transition: all 200ms ease-out;
}

li a {
	color: #1c1c1c;
	text-decoration: none;
}

form > a {
	color: black;
	padding: 0.6rem 0.5rem;
	text-align: center;
	font-size: 1.2rem;
	font-weight: bold;
	background: #efdb50;
	border-radius: 4px;
	text-decoration: none;
	margin-top: 1rem;
	transition: 200ms;
}

form > a:hover {
	transform: scale(1.05);
	transition: all 200ms ease-out;
}

.chapo header {
	margin-top: 2rem;
	display: flex;
	align-items: center;
}

.chapo header h1 {
	margin-left: 2rem;
}

.generation-block {
	display: flex;
	padding-bottom: 1rem;
}

code {
	cursor: pointer;
	border-radius: 4px;
	font-size: 0.8rem;
	display: block;
	background: #1c1c1c;
	padding: 1rem 2rem;
	word-break: break-all;
}

code:hover {
	background: #444444;
}

